<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Despicable Me Hunt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_view_heading">Find all</string>
    <string name="resetGame">Reset Game</string>
    <string name="exit">Exit</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="button_back">Back</string>
    <string name="text_heading"></string>
    <string name="text_result_msg"></string>

</resources>
