<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/custom_gap_size_5"
        android:layout_marginRight="@dimen/custom_gap_size_5" >

        <TextView
            android:id="@+id/textResultHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1.5"
            android:gravity="right|center_horizontal"
            android:text="@string/text_view_heading"
            android:textSize="@dimen/custom_text_size_1" />

        <ImageView
            android:id="@+id/focusImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <ImageView
            android:id="@+id/image00"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image01"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image02"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image03"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <ImageView
            android:id="@+id/image10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image12"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image13"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <ImageView
            android:id="@+id/image20"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image21"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image22"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image23"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <ImageView
            android:id="@+id/image30"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image31"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image32"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/image33"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" >

        <Button
            android:id="@+id/restartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resetGame" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>